--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,4 @@ CACHE_HOST=localhost
 CACHE_USER=default 
 CACHE_PASSWORD=my_awesome_cache_password
 CACHE_PORT=6379
+BASE_URL=http://localhost:8080/api
