--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ networks:
 services:
   db:
     container_name: awesome-db
-    image: 'postgres:latest'
+    image: 'ghcr.io/fboulnois/pg_uuidv7:1.6.0'
     restart: always
     deploy:
       resources:
@@ -32,6 +32,35 @@ services:
       options:
         max-size: '10m'
         max-file: '3'
+  bouncer:
+    container_name: identity-db-bcr
+    image: 'bitnami/pgbouncer:latest'
+    restart: unless-stopped
+    environment:
+      - POSTGRESQL_HOST=db
+      - POSTGRESQL_DATABASE=${POSTGRES_DB}
+      - POSTGRESQL_PASSWORD=${POSTGRES_PASSWORD}
+      - PGBOUNCER_DATABASE=${POSTGRES_DB}
+      - PGBOUNCER_AUTH_TYPE=scram-sha-256
+      - PGBOUNCER_AUTH_USER=${POSTGRES_USER}
+      - PGBOUNCER_AUTH_QUERY=SELECT usename, passwd FROM pg_shadow WHERE usename=$1
+    deploy:
+      resources:
+        limits:
+          cpus: '0.3'
+          memory: 1.5G
+    networks:
+      - dev
+    ports:
+      - '6432:6432'
+    logging:
+      driver: 'json-file'
+      options:
+        max-size: '10m'
+        max-file: '3'
+    depends_on:
+      db:
+        condition: service_healthy
   cache:
     container_name: identity-cache
     image: 'docker.dragonflydb.io/dragonflydb/dragonfly'
@@ -82,7 +111,7 @@ services:
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_PORT=5432
+      - POSTGRES_PORT=6432
       - COOKIE_SECRET=${COOKIE_SECRET}
       - CACHE_HOST=cache
       - CACHE_USER=default
