--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "awesome-backend-starter",
+	"name": "@gather-flow/users-service",
 	"version": "0.0.1",
 	"type": "module",
 	"description": "Awesome starter template for your next Node.js backend",
@@ -57,7 +57,7 @@
 		"@commitlint/config-conventional": "^19.7.1",
 		"@eslint/js": "^9.21.0",
 		"cpy-cli": "^5.0.0",
-		"drizzle-kit": "^0.30.5",
+		"drizzle-kit": "1.0.0-beta.1-c0277c0",
 		"eslint": "^9.21.0",
 		"eslint-config-prettier": "^10.0.2",
 		"eslint-plugin-prettier": "^5.2.3",
@@ -83,9 +83,11 @@
 		"@types/node": "^22.13.8",
 		"awilix": "^12.0.4",
 		"dotenv": "^16.4.7",
-		"drizzle-orm": "^0.40.0",
+		"drizzle-orm": "1.0.0-beta.1-c0277c0",
 		"fastify": "^5.2.1",
 		"fastify-type-provider-zod": "^4.0.2",
+		"i18next": "^25.1.3",
+		"i18next-http-middleware": "^3.7.4",
 		"ioredis": "^5.6.1",
 		"postgres": "^3.4.5",
 		"zod": "^3.24.2"
