--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,4 @@ CACHE_USER=default
 CACHE_PASSWORD=my_awesome_cache_password
 CACHE_PORT=6379
 BASE_URL=http://localhost:8080/api
+CORS_ORIGIN=gather.onelil.tech
