--- a/package.json
+++ b/package.json
@@ -77,9 +77,11 @@
 		"@fastify/cookie": "^11.0.2",
 		"@fastify/cors": "^11.0.0",
 		"@fastify/helmet": "^13.0.1",
+		"@fastify/jwt": "^9.1.0",
 		"@fastify/rate-limit": "^10.2.2",
 		"@fastify/swagger": "^9.4.2",
 		"@fastify/swagger-ui": "^5.2.2",
+		"@node-rs/argon2": "^2.0.2",
 		"@types/node": "^22.13.8",
 		"awilix": "^12.0.4",
 		"dotenv": "^16.4.7",
