--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,11 +10,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Codeqwofkqwok[fqw
+      - name: Checkout Code
         uses: actions/checkout@v3
 
-      - name: Install
+      - name: Install sshpass
         run: sudo apt-get install -y sshpass
+
+      - name: Prepare JWT keys
+        run: |
+          mkdir -p ./src/secrets
+          echo "$PRIVATE_KEY_B64" | base64 -d > ./src/secrets/private.pem
+          echo "$PUBLIC_KEY_B64" | base64 -d > ./src/secrets/public.pem
+        env:
+          PRIVATE_KEY_B64: ${{ secrets.PRIVATE_KEY_B64 }}
+          PUBLIC_KEY_B64: ${{ secrets.PUBLIC_KEY_B64 }}
 
       - name: Deploy
         run: |
