feat: implement auth (#2)
* feat: add appropriate tables to db

* feat: implement basic jwt auth

* feat: move jwt cookie management to the separate service

* fix: fix secrets leak

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,6 @@ CACHE_USER=default
 CACHE_PASSWORD=my_awesome_cache_password
 CACHE_PORT=6379
 BASE_URL=http://localhost:8080/api
+CORS_ORIGIN=gather.onelil.tech
+JWT_PASSPHRASE=some_passphrase
+CORS_ORIGIN=https://gather.onelil.tech
