--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
 		"i18next-http-middleware": "^3.7.4",
 		"ioredis": "^5.6.1",
 		"postgres": "^3.4.5",
+		"resend": "^4.5.1",
 		"zod": "^3.24.2"
 	}
 }
