--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -127,9 +127,9 @@ services:
       - PUBLIC_KEY_B64=${PUBLIC_KEY_B64}
     volumes:
       - ./src/secrets:/app/src/secrets
-    depends_on:
-      db:
-        condition: service_healthy
+    # depends_on:
+    #   db:
+    #     condition: service_healthy
     networks:
       - dev
     logging:
