fix: add deployable dockerfile

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -98,6 +98,9 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      args:
+        PRIVATE_KEY_B64: ${PRIVATE_KEY_B64}
+        PUBLIC_KEY_B64: ${PUBLIC_KEY_B64}
     restart: always
     deploy:
       resources:
@@ -123,13 +126,9 @@ services:
       - JWT_PASSPHRASE=${JWT_PASSPHRASE}
       - CORS_ORIGIN=${CORS_ORIGIN}
       - RESEND_API_KEY=${RESEND_API_KEY}
-      - PRIVATE_KEY_B64=${PRIVATE_KEY_B64}
-      - PUBLIC_KEY_B64=${PUBLIC_KEY_B64}
-    volumes:
-      - ./src/secrets:/app/src/secrets
-    # depends_on:
-    #   db:
-    #     condition: service_healthy
+    depends_on:
+      db:
+        condition: service_healthy
     networks:
       - dev
     logging:
