--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,8 +27,6 @@ services:
       retries: 5
     networks:
       - dev
-    ports:
-      - '5432:5432'
     logging:
       driver: 'json-file'
       options:
@@ -53,8 +51,6 @@ services:
           memory: 1.5G
     networks:
       - dev
-    ports:
-      - '6432:6432'
     logging:
       driver: 'json-file'
       options:
@@ -81,8 +77,6 @@ services:
       - dev
     environment:
       - CACHE_PASSWORD=${CACHE_PASSWORD}
-    ports:
-      - '6379:6379'
     healthcheck:
       test: ['CMD', 'redis-cli', '-a', '${CACHE_PASSWORD}', 'ping']
       interval: 10s
@@ -98,6 +92,9 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      args:
+        PRIVATE_KEY_B64: ${PRIVATE_KEY_B64}
+        PUBLIC_KEY_B64: ${PUBLIC_KEY_B64}
     restart: always
     deploy:
       resources:
@@ -133,15 +130,7 @@ services:
       options:
         max-size: '10m'
         max-file: '3'
-    secrets:
-      - public_key
-      - private_key
 
-secrets:
-  public_key:
-    file: ./src/secrets/public.pem
-  private_key:
-    file: ./src/secrets/private.pem
 volumes:
   pgdata:
   dragonflydata:
