--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
 		"@fastify/swagger-ui": "^5.2.2",
 		"@node-rs/argon2": "^2.0.2",
 		"@types/node": "^22.13.8",
+		"arctic": "^3.7.0",
 		"awilix": "^12.0.4",
 		"dotenv": "^16.4.7",
 		"drizzle-orm": "1.0.0-beta.1-c0277c0",
