--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"start:dev:watch": "NODE_ENV=development tsx --watch src/index.ts",
 		"docker:start:dev": "docker compose up",
 		"docker:stop:dev": "docker compose down",
-		"infrastructure:start:dev": "docker compose up db cache",
+		"infrastructure:start:dev": "docker compose -f docker-compose.dev.yml up",
 		"infrastructure:stop:dev": "docker compose down",
 		"db:start:dev": "docker compose up db",
 		"db:stop:dev": "docker compose down",
@@ -83,6 +83,7 @@
 		"@fastify/swagger-ui": "^5.2.2",
 		"@node-rs/argon2": "^2.0.2",
 		"@types/node": "^22.13.8",
+		"arctic": "^3.7.0",
 		"awilix": "^12.0.4",
 		"dotenv": "^16.4.7",
 		"drizzle-orm": "1.0.0-beta.1-c0277c0",
